--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
             <!--Cloudstack Links-->
             <h2>Cloudstack Links</h2>
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://thrivecstack.github.io/A-Checklist-for-When-a-Spouse-or-Parent-Passes/">https://thrivecstack.github.io/A-Checklist-for-When-a-Spouse-or-Parent-Passes/</a><br>
+                <a target="_bLank" href="https://thrivewealthadvisors.s3.us-east-005.backblazeb2.com/A+Checklist+for+When+a+Spouse+or+Parent+Passes/index.html">https://thrivewealthadvisors.s3.us-east-005.backblazeb2.com/A+Checklist+for+When+a+Spouse+or+Parent+Passes/index.html</a><br>
+                <a target="_bLank" href="https://a-checklist-for-when-a-spouse-git-199798-thrivecstacks-projects.vercel.app/">https://a-checklist-for-when-a-spouse-git-199798-thrivecstacks-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://magnificent-rabanadas-6f82c8.netlify.app/">https://magnificent-rabanadas-6f82c8.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
